--- a/templates/compare.html
+++ b/templates/compare.html
@@ -32,6 +32,34 @@
             ]
 
             Plotly.plot('ConecptsDiagram', data, {}, { showSendToCloud: true })
+        });		
+
+		window.addEventListener('DOMContentLoaded', (event) => {
+			var meanOld = {{ r["concpets_mean_old"] | safe }};
+			var varOld = {{ r["concpets_var_old"] | safe }};
+			var meanNew = {{ r["concpets_mean_new"] | safe }};
+			var varNew = {{ r["concpets_var_new"] | safe }};
+
+			var statsOld = {
+				x: ['mean', 'variance'],
+				y: [meanOld, varOld],
+				name: "last year",
+				type: 'bar'
+			};
+
+			var statsNew = {
+				x: ['mean', 'variance'],
+				y: [meanNew, varNew],
+				name: "this year",
+				type: 'bar'
+			};
+			
+			var data = [statsNew, statsOld];
+
+			var layout = {barmode: 'group'};
+			
+            Plotly.plot("MeanVar", data, layout);
+
         });
 
         function plotJoint(thisYear, lastYear, diagramName)
@@ -100,8 +128,14 @@
     <br>
     <h1>Compare {{ q }} Answers</h1>
 
-    <h2>Conecpts Difference</h2>
-    <h2>Concepts Summary</h2>
+    <h2>Conecpts Difference</h2>    
+
+	<h3>Mean and Variacnce</h3>
+	
+	<div id="MeanVar" class="histogramTable"></div>
+
+	<h3>Concepts Summary</h3>
+
     <div id="ConecptsDiagram" class="histogramTable"></div>
 
     <h2>Joint Concpets</h2>
